DTS-30162-Fixed the compilation for JIRA and Jira xray