@@ -38,6 +38,7 @@ import com.publicissapient.kpidashboard.common.repository.tracelog.ProcessorExec
 import com.publicissapient.kpidashboard.common.util.DateUtil;
 import com.publicissapient.kpidashboard.jira.constant.JiraConstants;
 import com.publicissapient.kpidashboard.jira.model.CompositeResult;
+import org.springframework.batch.item.Chunk;
 
 import lombok.extern.slf4j.Slf4j;
 
@@ -53,7 +54,7 @@ public class JiraIssueJqlWriterListener implements ItemWriteListener<CompositeRe
 	private ProcessorExecutionTraceLogRepository processorExecutionTraceLogRepo;
 
 	@Override
-	public void beforeWrite(List<? extends CompositeResult> compositeResult) {
+	public void beforeWrite(Chunk<? extends CompositeResult> compositeResult) {
 		// in future we can use this method to do something before saving data in db
 	}
 
@@ -64,12 +65,12 @@ public class JiraIssueJqlWriterListener implements ItemWriteListener<CompositeRe
 	 * org.springframework.batch.core.ItemWriteListener#afterWrite(java.util.List)
 	 */
 	@Override
-	public void afterWrite(List<? extends CompositeResult> compositeResults) {
+	public void afterWrite(Chunk<? extends CompositeResult> compositeResults) {
 		log.info("Saving status in Processor execution Trace log for Scrum Jql project");
 
 		List<ProcessorExecutionTraceLog> processorExecutionToSave = new ArrayList<>();
-		List<JiraIssue> jiraIssues = compositeResults.stream().map(CompositeResult::getJiraIssue)
-				.collect(Collectors.toList());
+		List<JiraIssue> jiraIssues = compositeResults.getItems().stream().map(CompositeResult::getJiraIssue)
+				.toList();
 
 		Map<String, List<JiraIssue>> projectWiseIssues = jiraIssues.stream()
 				.collect(Collectors.groupingBy(JiraIssue::getBasicProjectConfigId));
@@ -112,7 +113,7 @@ public class JiraIssueJqlWriterListener implements ItemWriteListener<CompositeRe
 	}
 
 	@Override
-	public void onWriteError(Exception exception, List<? extends CompositeResult> compositeResult) {
+	public void onWriteError(Exception exception, Chunk<? extends CompositeResult> compositeResult) {
 		log.error("Exception occured while writing jira Issue for Scrum jql project ", exception);
 	}
 }
